fixed picture and spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -18,7 +18,7 @@ body {
 
 .id-pic {
   border-radius: 10px;	
-  margin: 55px 0px 10px 20px;
+  margin: 55px 0px 5px 20px;
   float:right;
 }
 
